[tool.poetry]
name = "asaphus-vision-code-challenge"
version = "0.1.0"
description = "Asaphus Vision code challenge"
authors = ["lorenzopalloni <palloni.lorenzo@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.8"
numpy = "~1.23.0"
opencv-python = "~4.7.0"

[tool.poetry.dev-dependencies]
pytest = "~7.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
